Delete the class "Bundesstaaten.java" and reset the usages